# zephyr-minimal-setup

./: .gitignore  README.rst  board_settings.cmake  west.yml
.west/: config
app/: CMakeLists.txt  prj.conf  west.yml
hello_world/: CMakeLists.txt
hello_world/src/: main.cc
